# spelunker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
changelog/: 2026-05-22T000000-final-review-fixes.md
docs/superpowers/plans/: 2026-05-22-spelunker-cli.md
docs/superpowers/specs/: 2026-05-22-spelunker-cli-design.md
src/: cli.rs  error.rs  git.rs  lib.rs  main.rs  output.rs  scan.rs  search.rs
tests/: cli.rs
tests/common/: mod.rs
