[package]
name = "spelunker"
version = "0.1.3"
edition = "2021"
authors = ["Peter Grace <pete.grace@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
rayon = "1.10"
thiserror = "2.0.6"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
